# alsa-scarlett-gui

./: .gitignore  Dockerfile  FAQ.md  FUNDING.yml  INSTALL.md  INTERFACES.md  Makefile  PKGBUILD.template  README.md  RELEASE-NOTES.md  USAGE.md  alsa-scarlett-gui.spec.template  meson.build  vu.b4.alsa-scarlett-gui.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: build-debian-package.yml  build-flatpak-package.yml  release.yml
debian/: control
demo/: Clarett 8Pre USB.state  Clarett Plus 2Pre.conf  Clarett Plus 2Pre.state  Clarett Plus 4Pre.conf  Clarett Plus 4Pre.state  Clarett Plus 8Pre.state  Scarlett Gen 1 18i20.state  Scarlett Gen 1 18i6.state  Scarlett Gen 1 18i8.state  Scarlett Gen 1 6i6.state  Scarlett Gen 1 8i6.state  Scarlett Gen 2 18i20.conf  Scarlett Gen 2 18i20.state  Scarlett Gen 2 18i8.conf  Scarlett Gen 2 18i8.state  Scarlett Gen 2 6i6.conf  Scarlett Gen 2 6i6.state  Scarlett Gen 3 18i20.conf  Scarlett Gen 3 18i20.state  Scarlett Gen 3 18i8.conf  Scarlett Gen 3 18i8.state  Scarlett Gen 3 2i2.state  Scarlett Gen 3 4i4.conf  Scarlett Gen 3 4i4.state  Scarlett Gen 3 8i6.conf  Scarlett Gen 3 8i6.state  Scarlett Gen 3 Solo.conf  Scarlett Gen 3 Solo.state  Scarlett Gen 4 16i16.conf  Scarlett Gen 4 16i16.state  Scarlett Gen 4 18i16.conf  Scarlett Gen 4 18i16.state  Scarlett Gen 4 18i20.conf  Scarlett Gen 4 18i20.state  Scarlett Gen 4 2i2.conf  Scarlett Gen 4 2i2.state  Scarlett Gen 4 4i4.conf  Scarlett Gen 4 4i4.state  Scarlett Gen 4 Solo.conf  Scarlett Gen 4 Solo.state  (+6 more)
docs/: INSTALL.md  OLDKERNEL.md  USAGE.md  configuration.md  digital-io-availability.md  dsp.md  iface-1st-gen.md  iface-4th-gen-big.md  iface-4th-gen-small.md  iface-4th-gen.md  iface-large.md  iface-small.md  iface-vocaster.md  meson.build  presets.md
img/: meson.build
src/: Makefile  about.c  about.h  alsa-scarlett-gui-resources.xml  alsa-scarlett-gui.css  alsa-sim.c  alsa-sim.h  alsa.c  alsa.h  asound-stream-parser.c  asound-stream-parser.h  biquad.c  biquad.h  compressor-curve.c  compressor-curve.h  config-autogain.c  config-autogain.h  config-device-name.c  config-device-name.h  config-device-settings.c  config-device-settings.h  config-front-panel.c  config-front-panel.h  config-helpers.c  config-helpers.h  config-io.c  config-io.h  config-monitor-groups.c  config-monitor-groups.h  const.h  custom-names.c  custom-names.h  db.c  db.h  debug.c  debug.h  device-port-names.c  device-port-names.h  device-reset-config.c  device-reset-config.h  (+117 more)
src/po/: Makefile  README.md  de.po  linguas
src/tests/: Makefile  test-biquad.c
src/tools/: Makefile  alsa-scarlett-config.c
