state_files = files('Clarett Plus 2Pre.state',
'Clarett Plus 4Pre.state',
'Clarett Plus 8Pre.state',
'Scarlett Gen 2 18i20.state',
'Scarlett Gen 2 18i8.state',
'Scarlett Gen 2 6i6.state',
'Scarlett Gen 3 18i20.state',
'Scarlett Gen 3 18i8.state',
'Scarlett Gen 3 2i2.state',
'Scarlett Gen 3 4i4.state',
'Scarlett Gen 3 8i6.state',
'Scarlett Gen 3 Solo.state',
'Scarlett Gen 4 2i2.state',
'Scarlett Gen 4 4i4.state',
'Scarlett Gen 4 Solo.state',
'Vocaster One.state',
'Vocaster Two.state')

install_data(
  state_files,
  install_dir: datadir / 'alsa-scarlett-gui/demo',
)

