images = ['demo.gif',
'firmware-missing.png',
'firmware-update-required.png',
'firmware-updating.png',
'iface-4th-gen.png',
'iface-msd.png',
'iface-none.png',
'iface-small-gen3.png',
'main-global.png',
'main-inputs.png',
'main-outputs.png',
'routing-direct.png',
'scarlett-4th-gen-2i2-monitor.gif',
'scarlett-4th-gen-2i2-routing.png',
'scarlett-4th-gen-4i4-routing.png',
'scarlett-4th-gen-solo-mix-e-f.png',
'scarlett-4th-gen-solo-mix.gif',
'scarlett-4th-gen-solo-monitor.gif',
'window-levels-3rd-gen.png',
'window-levels-4th-gen.gif',
'window-main.png',
'window-mixer.png',
'window-routing.png',
'window-startup.png']

