sources = ['about.c',
'about.h',
'alsa-sim.c',
'alsa-sim.h',
'alsa.c',
'alsa.h',
'const.h',
'device-reset-config.c',
'device-reset-config.h',
'device-update-firmware.c',
'device-update-firmware.h',
'error.c',
'error.h',
'file.c',
'file.h',
'gtkdial.c',
'gtkdial.h',
'gtkhelper.c',
'gtkhelper.h',
'hardware.c',
'hardware.h',
'iface-mixer.c',
'iface-mixer.h',
'iface-no-mixer.c',
'iface-no-mixer.h',
'iface-none.c',
'iface-none.h',
'iface-unknown.c',
'iface-unknown.h',
'iface-update.c',
'iface-update.h',
'main.c',
'main.h',
'menu.c',
'menu.h',
'routing-drag-line.c',
'routing-drag-line.h',
'routing-lines.c',
'routing-lines.h',
'scarlett2-firmware.c',
'scarlett2-firmware.h',
'scarlett2-ioctls.c',
'scarlett2-ioctls.h',
'scarlett2.h',
'stringhelper.c',
'stringhelper.h',
'tooltips.c',
'tooltips.h',
'widget-boolean.c',
'widget-boolean.h',
'widget-drop-down.c',
'widget-drop-down.h',
'widget-dual.c',
'widget-dual.h',
'widget-gain.c',
'widget-gain.h',
'widget-input-select.c',
'widget-input-select.h',
'widget-label.c',
'widget-label.h',
'widget-sample-rate.c',
'widget-sample-rate.h',
'window-hardware.c',
'window-hardware.h',
'window-helper.c',
'window-helper.h',
'window-iface.c',
'window-iface.h',
'window-levels.c',
'window-levels.h',
'window-mixer.c',
'window-mixer.h',
'window-modal.c',
'window-modal.h',
'window-routing.c',
'window-routing.h',
'window-startup.c',
'window-startup.h']

executable( 'alsa-scarlett-gui' , sources ,
            dependencies: [ 
              m_dep,
              glib_dep, 
              gtk4_dep, 
              alsa_dep 
              ],
            install: true )

#alsa-scarlett-gui-resources.xml
#alsa-scarlett-gui.css
#vu.b4.alsa-scarlett-gui.desktop.template
